# OpenGL

./: README.md
CC_Lab1/: Makefile  Qt_Widgets  glwidget.cpp  glwidget.h  window.cpp  window.h
CC_Lab2/: Qt_Widgets.pro  glwidget.cpp  glwidget.h  moc_glwidget.cpp  window.cpp  window.h
CC_Lab3/: Qt_Widgets.pro  Qt_Widgets.pro.user.4.8-pre1  glwidget.cpp  glwidget.h  main.cpp  window.cpp  window.h
build-CC_lab1-Desktop-Debug/: Makefile  qtQGLWidget
camera/: CMakeLists.txt  functions.cpp  functions.h  main.cpp
camera/CameraClass/: Camera.cpp  Camera.h
camera/ShaderClass/: Shader.cpp  Shader.h
camera/shaders/: shader.frag
changeColorWithTime/: CMakeLists.txt  main.cpp
cmakeExample/: CMakeLists.txt  test.cpp
cmakeExample/dir/: helloworld.cpp
defaultCmakeProject/: main.cpp
diffFiles/: main.cpp
diffFiles/ShaderClass/: Shader.cpp  Shader.h
differentColor/: CMakeLists.txt  main.cpp
draw_rectangle/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp  rectangle.cbp
draw_triangle/: CMakeLists.txt  main.cpp
hello_window/: CMakeLists.txt  main.cpp
rotationCubes/: main.cpp
rotationCubes/shaders/: shader.vs
setUpOpenGL/: CMakeLists.txt  openGL.cpp
severalTexture/: main.cpp
severalTexture/ShaderClass/: Shader.h
shaderToDifFiles/: CMakeLists.txt  main.cpp
shaderToDifFiles/Shader/: Shader.h
shaderToDifFiles/shaders/: shader.vs
test_1/: CMakeLists.txt  main.cpp
test_2/: CMakeLists.txt
texture/: CMakeLists.txt  main.cpp
texture/shaders/: shader.frag
transformation/: main.cpp
(+1 files in other folders)
