cmake_minimum_required(VERSION 3.10)
project(changeColor)
set(LIBS glfw GL GLEW SOIL)
set(SHADER_DIR ShaderClass)
set(CAMERA_DIR CameraClass)

add_executable(main main.cpp)
add_library(ShaderClass ${SHADER_DIR}/Shader.cpp ${SHADER_DIR}/Shader.h)
add_library(CameraClass ${CAMERA_DIR}/Camera.cpp ${CAMERA_DIR}/Camera.h)
add_library(functions functions.cpp functions.h)
target_link_libraries(main functions ShaderClass CameraClass ${LIBS})
